--- a/lab3/tvarkaraštis.css
+++ b/lab3/tvarkaraštis.css
@@ -32,7 +32,7 @@ header {
     position: fixed;
     top: 0;
     display: block;
-    background-color: rgb(7, 199, 173);
+    background-color: #5d8ff1;
     left: 0;
     right: 0;
 }
@@ -55,7 +55,14 @@ nav > a  {
     display: inline-block;
     position: relative;
     top: 20px;
+    width: 150px;
+    text-align: center;
+    margin: 0px 10px;
     
+}
+
+body {
+    background-color: #dce2fd;
 }
 
 h3[danger] {
@@ -83,13 +90,20 @@ aside {
     background-color: lavender;
 }
 
+footer {
+    text-align: center;
+    background-color: #5d8ff1;
+    padding: 10px;
+    margin: 0;
+}
+
 #it {
     border-color: rgb(20,235,10);
     border-width: 3px;
     border-style: solid;
 }
 
-@media screen and (max-width: 620px) {
+@media screen and (max-width: 800px) {
     header {
         margin: auto;
     }
@@ -100,6 +114,18 @@ aside {
     }
 
     nav > a {
+        width: 41%;
+        margin: 0 2%;
+        padding: 10px 2%;
+
+        top: 5px;
+    }
+}
+@media screen and (max-width: 400px) {
+    nav > a {
+        width: 90%;
+        margin: 0;
+        padding: 10px 5%;
         top: 5px;
     }
 }
