--- a/lab3/tvarkaraštis.css
+++ b/lab3/tvarkaraštis.css
@@ -84,10 +84,16 @@ td, th {
     background-color: rgb(184, 219, 208);
     padding: 15px;
     text-align: left;
+    border-color: rgb(184, 219, 208);
+    border-width: 3px;
+    border-style: solid;
 }
 
 th {
-    background: rgb(20,150,120)
+    background: rgb(20,150,120);
+    border-color: rgb(20,150,120);
+    border-width: 3px;
+    border-style: solid;
 }
 
 aside {
