--- a/lab4/styling.css
+++ b/lab4/styling.css
@@ -1,4 +1,11 @@
 
+greedBorder {
+    border-color: rgb(20,235,10);
+    border-width: 3px;
+    border-style: solid;
+}
+
+
 main {
     max-width: 1024px;
     margin: auto;
@@ -35,8 +42,14 @@ td, th {
     background-color: rgb(184, 219, 208);
     padding: 15px;
     text-align: left;
+    border-color: rgb(184, 219, 208);
+    border-width: 3px;
+    border-style: solid;
 }
 
 th {
-    background: rgb(20,150,120)
+    background: rgb(20,150,120);
+    border-color: rgb(20,150,120);
+    border-width: 3px;
+    border-style: solid;
 }
