--- a/lab4/styling.css
+++ b/lab4/styling.css
@@ -1,6 +1,6 @@
 
-greedBorder {
-    border-color: rgb(20,235,10);
+.blueBorder {
+    border-color: rgb(76, 128, 219);
     border-width: 3px;
     border-style: solid;
 }
@@ -39,6 +39,7 @@ table {
 }
 
 td, th {
+    position: relative;
     background-color: rgb(184, 219, 208);
     padding: 15px;
     text-align: left;
@@ -52,4 +53,27 @@ th {
     border-color: rgb(20,150,120);
     border-width: 3px;
     border-style: solid;
+}
+
+td .tooltip {
+    display: none;
+}
+
+td:hover .tooltip {
+    display: block;
+    position: absolute;
+    top: -18px;
+    left: 50%; 
+}
+
+.tooltip li {
+    width: 120px;
+    background-color: rgb(0,95,74);
+    color: white;
+    text-align: center;
+    padding: 5px 0;
+    position: relative;
+    z-index: 1;
+    list-style: none;
+   
 }
